--- a/app/src/main/res/layout/activity_customer_main.xml
+++ b/app/src/main/res/layout/activity_customer_main.xml
@@ -8,4 +8,32 @@
     android:fitsSystemWindows="true"
     tools:context="mobile.li.librarymanagement.CustomerMainActivity">
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context=".CustomerMainActivity"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/listView_rented"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+        </ListView>
+
+        <Button
+            android:id="@+id/rentNewButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/customer_main_rent_new_book"/>
+
+    </LinearLayout>
+
 </android.support.design.widget.CoordinatorLayout>
