Ray Change for search result for book with similar name and librarian my book search list

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -35,6 +35,11 @@
             android:layout_height="wrap_content"
             android:text="@string/search_book"/>
         <Button
+            android:id="@+id/searchMyButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/search_my_book"/>
+        <Button
             android:id="@+id/addButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
