Fix Book/Customer. Fix Customer Rent Book. Add multiple function and deal with different exception. Add new return book activity but not implemented.

--- a/app/src/main/res/layout/activity_customer_book_list.xml
+++ b/app/src/main/res/layout/activity_customer_book_list.xml
@@ -26,6 +26,12 @@
             android:layout_weight="1">
         </ListView>
 
+        <Button
+            android:id="@+id/backToCustomerMainButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/back_customer_main"/>
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
