--- a/app/src/main/res/layout/activity_customer_return_confirm.xml
+++ b/app/src/main/res/layout/activity_customer_return_confirm.xml
@@ -34,6 +34,16 @@
         android:paddingBottom="8dp"
         android:text="" />
 
+    <ImageView
+        android:id="@+id/renturn_sign"
+        android:visibility="gone"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/ic_check_circle_white_24px"
+        android:scaleType="fitXY"
+        android:layout_marginBottom="4dp"
+        android:layout_gravity="center_horizontal"/>
+
     <ListView
         android:id="@+id/listView_log"
         android:layout_width="match_parent"
