--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#334460</color>
     <color name="colorPrimaryDark">#2D2D2D</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#007eaf</color>
 </resources>
